// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Dt checkGrammar 1`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt checkGrammar 2`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt checkGrammar 3`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt checkGrammar 4`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt checkHighlight 1`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt checkHighlight 2`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt checkHighlight 3`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt checkHighlight 4`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt checkSpaces 1`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt checkSpaces 2`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt checkSpaces 3`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt checkSpaces 4`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt className 1`] = `
<dt
  className="uu5-bricks-dt my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt content 1`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</dt>
`;

exports[`UU5.Bricks.Dt content 2`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</dt>
`;

exports[`UU5.Bricks.Dt content 3`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</dt>
`;

exports[`UU5.Bricks.Dt content 4`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</dt>
`;

exports[`UU5.Bricks.Dt controlled 1`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt controlled 2`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt controlled 3`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt controlled 4`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt default props 1`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt disabled 1`] = `
<dt
  className="uu5-bricks-dt uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</dt>
`;

exports[`UU5.Bricks.Dt disabled 2`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt disabled 3`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt disabled 4`] = `
<dt
  className="uu5-bricks-dt uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</dt>
`;

exports[`UU5.Bricks.Dt dynamic 1`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt dynamic 2`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt dynamic 3`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt dynamic 4`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt hidden 1`] = `
<dt
  className="uu5-bricks-dt uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt hidden 2`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt hidden 3`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt hidden 4`] = `
<dt
  className="uu5-bricks-dt uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt id 1`] = `
<dt
  className="uu5-bricks-dt"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt ignoreHTML 1`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt ignoreHTML 2`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt ignoreHTML 3`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt ignoreHTML 4`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt is inner bricks.dt Bricks.Dt is root to: UU5.Bricks.Dt 1`] = `
<dl
  className="uu5-bricks-dl"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <Dt
    className={null}
    content="Dwarf"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID02"
    ignoreInnerHTML={false}
    key="uuID02"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
  <Dd
    className={null}
    content="The small man with funny hat"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID03"
    ignoreInnerHTML={false}
    key="uuID03"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
  <Dt
    className={null}
    content="Red Dwarf"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID04"
    ignoreInnerHTML={false}
    key="uuID04"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
  <Dd
    className={null}
    content="Small star, or large space ship from british sitcom."
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID05"
    ignoreInnerHTML={false}
    key="uuID05"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</dl>
`;

exports[`UU5.Bricks.Dt mainAttrs 1`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt name 1`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt noIndex 1`] = `
<dt
  className="uu5-bricks-dt uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt noIndex 2`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt noIndex 3`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt noIndex 4`] = `
<dt
  className="uu5-bricks-dt uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt selected 1`] = `
<dt
  className="uu5-bricks-dt uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt selected 2`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt selected 3`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt selected 4`] = `
<dt
  className="uu5-bricks-dt uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt style 1`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Dt style 2`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Dt style 3`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Dt style 4`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Dt textCorrector 1`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt textCorrector 2`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt textCorrector 3`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt textCorrector 4`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Dt tooltip 1`] = `
<dt
  className="uu5-bricks-dt"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
